--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -114,6 +114,9 @@
     - name: Aanbevolen procedures
       href: luis-concept-best-practices.md
       displayName: 'phrase list, pattern, intent, utterance, version, do, don''t, example utterances, iteration, cycle, correct, right'
+    - name: LUIS en QnA Maker gebruiken
+      href: choose-natural-language-processing-service.md
+      displayName: 'nlp, qna maker'
     - name: Uw app plannen
       displayName: 'simple, composite, prebuilt, list, regex, regular expression'
       href: luis-how-plan-your-app.md
