--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -53,15 +53,21 @@
           href: cognitive-search-tutorial-blob-python.md
 - name: Voorbeelden
   items:
-    - name: Azure-codevoorbeelden
-      href: 'https://azure.microsoft.com/resources/samples/?service=search'
+    - name: 'C#-voorbeelden'
+      href: 'https://docs.microsoft.com/samples/browse/?products=azure-search&languages=csharp'
+    - name: Java-voorbeelden
+      href: 'https://docs.microsoft.com/samples/browse/?products=azure-search&languages=java'
+    - name: Python-voorbeelden
+      href: 'https://docs.microsoft.com/samples/browse/?products=azure-search&languages=python'
+    - name: REST-voorbeelden
+      href: 'https://docs.microsoft.com/samples/browse/?products=azure-search&languages=rest'
 - name: Training
   items:
-    - name: Bootcamp voor knowledge mining
-      href: 'https://azure.github.io/LearnAI-KnowledgeMiningBootcamp/'
+    - name: Inleiding (Microsoft Learn)
+      href: 'https://docs.microsoft.com/learn/modules/intro-to-azure-search/'
     - name: Zoekfunctionaliteit toevoegen aan apps (Pluralsight)
       href: 'https://www.pluralsight.com/courses/azure-adding-search-abilities-apps'
-    - name: Microsoft Azure Developer-cursus (Pluralsight)
+    - name: Cursus voor ontwikkelaars (Pluralsight)
       href: 'https://www.pluralsight.com/courses/microsoft-azure-textual-content-search-enabling'
 - name: Concepten
   items:
