--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -203,7 +203,7 @@
         - name: Azure SQL Database
           href: connector-azure-sql-database.md
         - name: Azure SQL Database Managed Instance
-          href: connector-azure-sql-database-managed-insance.md
+          href: connector-azure-sql-database-managed-instance.md
         - name: Azure SQL Data Warehouse
           href: connector-azure-sql-data-warehouse.md
         - name: Azure-tabelopslag
@@ -592,6 +592,8 @@
       items:
         - name: Waarom Azure Data Factory?
           href: data-migration-guidance-overview.md
+        - name: Gegevens migreren van AWS S3 naar Azure
+          href: data-migration-guidance-s3-azure-storage.md
 - name: Naslaginformatie
   items:
     - name: .NET
