--- a/articles/governance/blueprints/toc.yml
+++ b/articles/governance/blueprints/toc.yml
@@ -27,6 +27,17 @@
     - name: Index
       displayName: 'list, examples'
       href: ./samples/index.md
+    - name: ISO 27001
+      items:
+        - name: Overzicht
+          displayName: 'standards, iso, 27001'
+          href: ./samples/iso27001/index.md
+        - name: Toewijzing van beheeropties
+          displayName: 'standards, iso, 27001'
+          href: ./samples/iso27001/control-mapping.md
+        - name: Implementatiestappen
+          displayName: 'standards, iso, 27001'
+          href: ./samples/iso27001/deploy.md
     - name: ISO 27001 - gedeelde services
       items:
         - name: Overzicht
