--- a/articles/machine-learning/service/index.yml
+++ b/articles/machine-learning/service/index.yml
@@ -27,28 +27,25 @@ abstract:
     href: 'https://channel9.msdn.com/Events/Connect/Microsoft-Connect--2018/D240/'
     width: 250
 sections:
-  - title: QuickStarts van vijf minuten
-    items:
-      - type: paragraph
-        text: "Na het \_ <a href=\"setup-create-workspace\">maken van een werkruimte</a> voor Azure Machine Learning Service kunt u aan de slag met deze quickstarts:"
-      - type: list
-        style: unordered
-        items:
-          - html: <a href="quickstart-run-cloud-notebook">Een experiment uitvoeren in de cloud</a> (geen installatie vereist).
-          - html: <a href="quickstart-run-local-notebook">Een experiment met behulp van een lokale notebookserver uitvoeren</a> (lokale SDK installeren).
   - title: Zelfstudies met stapsgewijze instructies
     items:
       - type: paragraph
-        text: 'Ontdek hoe u gegevens voorbereidt, experimenten opzet, en Machine Learning-modellen traint en operationeel maakt:'
+        text: 'Ontdek hoe u gegevens voorbereidt, experimenten opzet, en Machine Learning-modellen traint en operationeel maakt.'
+      - type: paragraph
+        text: '<b>Gebruik de Azure-portal</b>, een gebruiksvriendelijke interface waarin u geen code hoeft te schrijven, voor Machine Learning:'
       - type: list
         style: unordered
         items:
-          - html: 'Aan de slag: Uw eerste geautomatiseerde ML-model in de Azure-portal <a href="tutorial-first-experiment-automated-ml">trainen en implementeren</a>.'
-          - html: 'Aan de slag: <a href="tutorial-1st-experiment-sdk-setup">Ontwikkelomgeving instellen</a> en <a href="tutorial-1st-experiment-sdk-train">uw eerste ML-model trainen</a> met behulp van een Jupyter-notebook (<b>tweedelige reeks</b>).'
-          - html: 'Aan de slag: Uw eerste ML-experiment <a href="ui-tutorial-automobile-price-train-score">trainen</a> en <a href="ui-tutorial-automobile-price-deploy">implementeren</a> met de visuele interface voor slepen en neerzetten (<b>tweedelige reeks</b>).'
-          - html: Modellen voor de classificatie van afbeeldingen <a href="tutorial-train-models-with-aml">trainen</a> en <a href="tutorial-deploy-models-with-aml">implementeren</a> (<b>tweedelige reeks</b>).
-          - html: <a href="tutorial-data-prep">Gegevens voorbereiden</a> en <a href="tutorial-auto-train-models">automatische leerprocessen gebruiken</a> om regressiemodellen te trainen en af te stemmen (<b>tweedelige reeks</b>).
-          - html: <a href="ui-tutorial-automobile-price-train-score">Prijzen van auto's voorspellen</a> met de visuele interface en het regressiemodel <a href="ui-tutorial-automobile-price-deploy">implementeren</a>.
+          - html: '<a href="tutorial-first-experiment-automated-ml">Train uw eerste, geautomatiseerde Machine Learning-experiment.</a>'
+          - html: <a href="ui-tutorial-automobile-price-train-score">Train uw eerste experiment in de gebruikersinterface&quot; met slepen en neerzetten van de visuele interface.</a>
+      - type: paragraph
+        text: '<b>Gebruik de Python-SDK</b> in scripts en notebooks voor Machine Learning:'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="tutorial-1st-experiment-sdk-setup">Stel uw omgeving in en train uw eerste ML-experiment.</a>
+          - html: <a href="tutorial-train-models-with-aml">Train en implementeer modellen voor classificatie van afbeeldingen.</a>
+          - html: <a href="tutorial-data-prep">Bereid gegevens voor en gebruik geautomatiseerde ML om taxitarieven te voorspellen</b>).</a>
   - title: Voorbeelden
     items:
       - type: paragraph
