--- a/articles/hdinsight/interactive-query/TOC.yml
+++ b/articles/hdinsight/interactive-query/TOC.yml
@@ -24,10 +24,10 @@
       maintainContext: true
     - name: Problemen oplossen
       items:
-        - name: OutOfMemoryError-uitzondering
-          items:
-            - name: De limiet voor GC-overhead is overschreden
-              href: ./interactive-query-troubleshoot-outofmemory-overhead-exceeded.md
+        - name: De limiet voor GC-overhead is overschreden
+          href: ./interactive-query-troubleshoot-outofmemory-overhead-exceeded.md
+        - name: Apache Ambari Tez-weergave wordt langzaam geladen
+          href: ./interactive-query-troubleshoot-tez-view-slow.md
         - name: Foutbericht niet weergegeven in Apache Hive-weergave
           href: ./interactive-query-troubleshoot-error-message-hive-view.md
         - name: Apache Hive-weergave niet toegankelijk
