--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -56,6 +56,8 @@
       items:
         - name: 'C#'
           href: ./Quickstarts/create-publish-kb-csharp-sdk.md
+        - name: Node.js
+          href: ./Quickstarts/create-publish-kb-nodejs-sdk.md
 - name: Zelfstudies
   items:
     - name: Een knowledge base maken en vragen beantwoorden
