--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -17,43 +17,43 @@
     - name: ESP-clusters configureren met Azure AD DS
       href: apache-domain-joined-configure-using-azure-adds.md
     - name: Azure AD-gebruikers synchroniseren met een HDInsight-cluster
-      href: ../hdinsight-sync-aad-users-to-cluster.md
+      href: ../hdinsight-sync-aad-users-to-cluster.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
     - name: Apache Hive-beleid configureren
       href: apache-domain-joined-run-hive.md
     - name: VSCode gebruiken om een koppeling te maken met een ESP-cluster
       href: ../hdinsight-for-vscode.md
     - name: IntelliJ gebruiken om een koppeling te maken met een ESP-cluster
-      href: ../spark/apache-spark-intellij-tool-plugin.md
+      href: ../spark/apache-spark-intellij-tool-plugin.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
     - name: Eclipse gebruiken om een koppeling te maken met een ESP-cluster
-      href: ../spark/apache-spark-eclipse-tool-plugin.md
+      href: ../spark/apache-spark-eclipse-tool-plugin.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
     - name: Apache Oozie gebruiken in ESP-clusters
       href: hdinsight-use-oozie-domain-joined-clusters.md
     - name: Gegevens beveiligen
-      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
+      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
     - name: Netwerktoegang
       items:
         - name: HDInsight-architectuur voor virtueel netwerk
-          href: ../hdinsight-virtual-network-architecture.md
+          href: ../hdinsight-virtual-network-architecture.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
         - name: VNETs plannen voor HDInsight
-          href: ../hdinsight-plan-virtual-network-deployment.md
+          href: ../hdinsight-plan-virtual-network-deployment.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
         - name: VNETs maken voor HDInsight
-          href: ../hdinsight-create-virtual-network.md
+          href: ../hdinsight-create-virtual-network.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
         - name: Vereiste IP-adressen voor NSG's en UDR's
-          href: ../hdinsight-management-ip-addresses.md
+          href: ../hdinsight-management-ip-addresses.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
         - name: HDInsight verbinden met een on-premises netwerk
-          href: ../connect-on-premises-network.md
+          href: ../connect-on-premises-network.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
         - name: Een Apache HBase-cluster maken in Azure VNet
-          href: ../hbase/apache-hbase-provision-vnet.md
+          href: ../hbase/apache-hbase-provision-vnet.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
         - name: Replicatie van een Apache HBase-cluster in Azure VNet
-          href: ../hbase/apache-hbase-replication.md
+          href: ../hbase/apache-hbase-replication.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
     - name: Bewaken met behulp van Azure Monitor-logboeken
       items:
         - name: Azure Monitor-logboeken gebruiken
-          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
+          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
         - name: Query's gebruiken met Azure Monitor-logboeken
-          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
+          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
         - name: Cluster-prestaties bewaken
-          href: ../hdinsight-key-scenarios-to-monitor.md
+          href: ../hdinsight-key-scenarios-to-monitor.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
 - name: Procedures
   items:
     - name: ESP-clusters maken en synchroniseren met on-premises
@@ -71,7 +71,7 @@
     - name: Java-SDK
       href: 'https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-preview'
     - name: Go-SDK
-      href: ../hdinsight-go-sdk-overview.md
+      href: ../hdinsight-go-sdk-overview.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
     - name: .NET (Apache HBase)
       href: 'https://www.nuget.org/packages/Microsoft.HBase.Client/'
     - name: REST
@@ -86,9 +86,9 @@
     - name: Releaseopmerkingen
       items:
         - name: Opmerkingen bij de huidige release
-          href: ../hdinsight-release-notes.md
+          href: ../hdinsight-release-notes.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
         - name: Gearchiveerde releaseopmerkingen
-          href: ../hdinsight-release-notes-archive.md
+          href: ../hdinsight-release-notes-archive.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
     - name: Azure-roadmap
       href: 'https://azure.microsoft.com/roadmap/?category=intelligence-analytics'
     - name: Hulp op het forum
@@ -100,4 +100,4 @@
     - name: Prijscalculator
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Windows-hulpprogramma's voor HDInsight
-      href: ../hdinsight-hadoop-windows-tools.md
+      href: ../hdinsight-hadoop-windows-tools.md?toc=/azure/hdinsight/domain-joined/toc.json&bc=/azure/hdinsight/domain-joined/breadcrumb/toc.json
